--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <ion-icon name="close" id="closemenu"></ion-icon>
       </label>
       <ul class="nav-bar">
-        <button style="--i:0">Add Barber Shop</button>
-        <button id="loginButton" style="--i:1">Log In</button>
-        <button id="signupButton" style="--i:2">Sign Up</button>
-        <button id="logoutButton" style="--i:1">Logout</button>
+        <button>Add Barber Shop</button>
+        <button id="loginButton">Log In</button>
+        <button id="signupButton">Sign Up</button>
+        <button id="logoutButton">Logout</button>
       </ul>
     </nav>
     <div class="head">
