updated index.html and script.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ion-icon name="close" id="closemenu"></ion-icon>
       </label>
       <ul class="nav-bar">
-        <button>Add Barber Shop</button>
+        <button id="addBarberShop">Add Barber Shop</button>
         <button id="loginButton">Log In</button>
         <button id="signupButton">Sign Up</button>
         <button id="logoutButton">Logout</button>
